@@ -76,4 +76,5 @@ genklemsamp -c 500 -vd 0 -1 0 -vu 0 0 1 south_windows.rad
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-dctimestep(1), genskyvec(1), mkillum(1), rtcontrib(1), rtrace(1), vwrays(1)
+dctimestep(1), genBSDF(1), genskyvec(1), mkillum(1),
+rtcontrib(1), rtrace(1), vwrays(1)
